# cipher

./: .env.example  .gitignore  Cargo.toml  Dockerfile
cipher_core/: Cargo.toml
cipher_core/src/repository/: mod.rs  profile_repository.rs  staff_role_repository.rs  user_repository.rs
cipher_database/: Cargo.toml  diesel_mysql.toml
cipher_database/migrations/mysql/2025-01-29-032332_create_users/: down.sql  up.sql
cipher_database/migrations/mysql/2025-02-01-015907_create_staff_roles/: down.sql  up.sql
cipher_database/migrations/mysql/2025-02-05-033255_create_profiles/: down.sql  up.sql
cipher_database/migrations/postgres/2025-01-29-032258_create_users/: up.sql
cipher_database/migrations/postgres/2025-02-01-015934_create_staff_roles/: down.sql  up.sql
cipher_database/migrations/postgres/2025-02-05-033227_create_profiles/: down.sql  up.sql
cipher_database/migrations/sqlite/2025-02-01-020000_create_staff_roles/: up.sql
cipher_database/migrations/sqlite/2025-02-05-032343_create_profiles/: down.sql  up.sql
cipher_database/src/: lib.rs
cipher_database/src/mysql/: schema.rs
cipher_database/src/mysql/repository/: mod.rs  profile_repository.rs  staff_role_repository.rs  user_repository.rs
cipher_database/src/postgres/: mod.rs  schema.rs
cipher_database/src/postgres/repository/: mod.rs  profile_repository.rs  staff_role_repository.rs  user_repository.rs
cipher_database/src/sqlite/: schema.rs
cipher_database/src/sqlite/repository/: mod.rs  profile_repository.rs  staff_role_repository.rs  user_repository.rs
cipher_discord_bot/: Cargo.toml
cipher_discord_bot/src/: checks.rs  main.rs  utils.rs
cipher_discord_bot/src/app/: event_handler.rs  framework.rs  mod.rs  on_error.rs
cipher_discord_bot/src/cli/: command.rs  mod.rs  start.rs
cipher_discord_bot/src/commands/: about.rs  help.rs  mod.rs  ping.rs  profile.rs
cipher_discord_bot/src/commands/pokeapi/: mod.rs  pokemon.rs
cipher_discord_bot/src/commands/profile/: codes.rs  edit.rs  mod.rs
rotom_core/: Cargo.toml
rotom_core/src/repository/: mod.rs  user_repository.rs
rotom_database/: Cargo.toml  diesel_postgres.toml  diesel_sqlite.toml
rotom_database/migrations/sqlite/2025-01-29-032217_create_users/: down.sql  up.sql
rotom_database/src/: lib.rs
rotom_database/src/mysql/: mod.rs  schema.rs
rotom_database/src/mysql/repository/: mod.rs  (+1 more)
rotom_database/src/postgres/: mod.rs  schema.rs
rotom_database/src/sqlite/: mod.rs  schema.rs
rotom_discord_bot/: Cargo.toml
rotom_discord_bot/src/: main.rs
rotom_discord_bot/src/app/: mod.rs
rotom_discord_bot/src/cli/: mod.rs  start.rs
(+4 files in other folders)
