[package]
name = "cipher_database"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.85"
diesel = { version = "2.2.6", default-features = false }
diesel-async = { version = "0.5.2", features = ["bb8"] }
diesel_migrations = "2.2.0"
cipher_core = { path = "../cipher_core" }
thiserror = "2.0.11"

[features]
default = ["mysql", "postgres", "sqlite"]
mysql = [
    "diesel/mysql",
    "diesel-async/mysql",
    "diesel_migrations/mysql",
]
postgres = [
    "diesel/postgres",
    "diesel-async/postgres",
    "diesel_migrations/postgres",
]
sqlite = [
    "diesel/sqlite",
    "diesel/returning_clauses_for_sqlite_3_35",
    "diesel-async/sync-connection-wrapper",
    "diesel_migrations/sqlite",
]
