[package]
name = "cipher_discord_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive", "env"] }
dotenvy = { version = "0.15.7", features = ["clap"] }
env_logger = "0.11.6"
humantime = "2.1.0"
log = "0.4.25"
poise = "0.6.1"
cipher_core = { path = "../cipher_core" }
cipher_database = { path = "../cipher_database", default-features = false }
secrecy = "0.10.3"
serenity = "0.12.4"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
futures = "0.3.31"

[features]
default = ["mysql", "postgres", "sqlite"]
mysql = ["cipher_database/mysql"]
postgres = ["cipher_database/postgres"]
sqlite = ["cipher_database/sqlite"]
