[package]
name = "rotom_discord_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.27", features = ["derive", "env"] }
dotenvy = { version = "0.15.7", features = ["clap"] }
env_logger = "0.11.6"
log = "0.4.25"
rotom_core = { path = "../rotom_core" }
rotom_database = { path = "../rotom_database", default-features = false }
secrecy = "0.10.3"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }

[features]
default = ["mysql", "postgres", "sqlite"]
mysql = ["rotom_database/mysql"]
postgres = ["rotom_database/postgres"]
sqlite = ["rotom_database/sqlite"]
